test-package-compiler/src/snapshots/test_package_compiler__generated_tests__import_cycle_multi.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/import_cycle_multi"
---
error: Import cycle
  ┌─ src/three.gleam:4:1
  │
4 │ import one
  │ ^ Imported here
  │
  ┌─ src/two.gleam:4:1
  │
4 │ import three
  │ ------------ Imported here
  │
  ┌─ src/one.gleam:4:1
  │
4 │ import two
  │ ---------- Imported here

The import statements for these modules form a cycle:

    ┌─────┐
    │     three
    │     ↓
    │     two
    │     ↓
    │     one
    └─────┘
Gleam doesn't support dependency cycles like these, please break the cycle
to continue.
